[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/menu/botao_jogar.png" type="Texture" id=1]
[ext_resource path="res://scenes/menu/menu.gd" type="Script" id=2]
[ext_resource path="res://sprites/menu/botao_sair.png" type="Texture" id=3]
[ext_resource path="res://sprites/menu/bg_menu.jpg" type="Texture" id=4]
[ext_resource path="res://sprites/menu/nome jogo.png" type="Texture" id=5]
[ext_resource path="res://sprites/menu/botao_jogar_ativo.png" type="Texture" id=6]
[ext_resource path="res://sprites/menu/botao_sair_ativo.png" type="Texture" id=7]

[node name="menu" type="Node2D"]
position = Vector2( 431, 218 )
script = ExtResource( 2 )

[node name="BgMenu" type="TextureRect" parent="."]
margin_left = -438.0
margin_top = -222.0
margin_right = 637.0
margin_bottom = 417.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titulo" type="TextureRect" parent="."]
margin_left = -607.0
margin_top = -260.0
margin_right = 1132.0
margin_bottom = 521.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotaoJogar" type="TextureButton" parent="."]
margin_left = -100.0
margin_top = 66.0
margin_right = 262.0
margin_bottom = 162.0
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 6 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotaoSair" type="TextureButton" parent="."]
margin_left = -105.0
margin_top = 214.0
margin_right = 268.0
margin_bottom = 313.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 7 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="BotaoJogar" to="." method="_on_BotaoJogar_mouse_entered"]
[connection signal="mouse_exited" from="BotaoJogar" to="." method="_on_BotaoJogar_mouse_exited"]
[connection signal="pressed" from="BotaoJogar" to="." method="_on_BotaoJogar_pressed"]
[connection signal="mouse_entered" from="BotaoSair" to="." method="_on_BotaoSair_mouse_entered"]
[connection signal="mouse_exited" from="BotaoSair" to="." method="_on_BotaoSair_mouse_exited"]
[connection signal="pressed" from="BotaoSair" to="." method="_on_BotaoSair_pressed"]
